concord_macros/tests/trybuild/fail/parser/route/base_url_rejects_path_query_fragment.rs
use concord_macros::api;

api! {
    client PathBaseApi {
        base "https://example.com/api"
    }
}

api! {
    client QueryBaseApi {
        base "https://example.com?x=1"
    }
}

api! {
    client FragmentBaseApi {
        base "https://example.com#frag"
    }
}

fn main() {}
